--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="hero">
         <div class="hero-body is-justify-content-center">
             <p class="title is-justify-content-center">
-            What do you want to drink?
+            Thirsty?
             </p>
             <p class="subtitle">
             Find a brewery near you:
