--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <div>
         <form id="zipcode-form" class="card-body">
             <h3 class="card-header">Search by Zipcode:</h3>           
-            <input id="city" type = "text" autofocus = "true" class = "form-input"/>
+            <input id="zipcode" type = "text" autofocus = "true" class = "form-input"/>
         <button type="submit" class="button is-warning is-outlined is-rounded">Search</button>
         </form>
 
     </div>
-    
+
+<script src=""></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
