--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Beer Me</title>
 </head>
 <body>
@@ -13,9 +14,9 @@
             <h2 class="title is-justify-content-center">Find a brewery near you</h2>
 
             <form id="zipcode-form" class="card-body">
-                <p class="card-header">Search by Zipcode:</p>           
-                <input id="city" type = "text" autofocus = "true" class = "form-input"/>
-                <button type="submit" class="button is-warning is-outlined is-rounded">Search</button>
+                <!--<p class="card-header">Search by Zipcode:</p>-->           
+                <input id="city" type = "text" autofocus = "true" class = "form-input" placeholder="Search by zipcode"/>
+                <button type="submit"> <i i class="material-icons">search</i></i> </button>
             </form>
         </div>
     </header>
