added material io icons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <form id="zipcode-form" class="card-body">
                 <!--<p class="card-header">Search by Zipcode:</p>-->           
                 <input id="city" type = "text" autofocus = "true" class = "form-input" placeholder="Search by zipcode"/>
-                <button type="submit"> <i i class="material-icons">search</i></i> </button>
+                <button type="submit"> <i i class="material-icons">search</i> </button>
             </form>
         </div>
     </header>
@@ -29,7 +29,11 @@
                 <h5>[Brewery Name]</h5>
                 <h6>[Location]</h6>
             </div>
-            <img src="./assets/Images/Arrow.png" />
+             
+             <span class="material-icons">
+                arrow_forward_ios
+                </span>
+                
         </div>
 
     </section>
