--- a/index.html
+++ b/index.html
@@ -6,28 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <title>Beer Me</title>
 </head>
 <body>
     <Header class="hero">
         <div class="hero-body is-justify-content-center">
-            <h2 class="title is-justify-content-center">Find a brewery near you</h2>
+            <h2 class="title is-justify-content-center">Find A Brewery Near You</h2>
 
             <form id="zipcode-form" class="card-body">
-                <!--<p class="card-header">Search by Zipcode:</p>-->           
+                <!--<p class="card-header">Search by Zipcode:</p>-->   
+                <div>  
+                <button type="submit"> <i class="material-icons">search</i> </button>          
                 <input id="city" type = "text" autofocus = "true" class = "form-input" placeholder="Search by zipcode"/>
-                <button type="submit"> <i i class="material-icons">search</i> </button>
+                </div>
             </form>
         </div>
     </header>
 
     <section>
-        <h2>Brewies near you</h2>
+        <h2>Breweries near you</h2>
         <div class="flex">
             <img src="./assets/Images/BeerMe.png" />
             <div class="flex2">
-                <h5>[Brewery Name]</h5>
-                <h6>[Location]</h6>
+                <h3>[Brewery Name]</h3>
+                <h4>[Location]</h4>
             </div>
              
              <span class="material-icons">
@@ -38,5 +41,8 @@
 
     </section>
     
+    <!-- Java Script-->
+    <!--<script src=""></script>-->
+    <script src="https://api.openbrewerydb.org/breweries?per_page=5"></script>
 </body>
 </html>
