--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="flex2">
                 <h3>[Brewery Name]</h3>
                 <h4>[Location]</h4>
+                <h4>[Website]</h4>
             </div>
              
              <span class="material-icons">
