--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </span>
                 
         </div>
-        <div class="flex">
+        <div class="flex card">
             <div id="brewery"></div>
 
         </div>
