--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </span>
                 
         </div>
-        <div class="flex">
+        <div class="flex card">
             <div id="brewery"></div>
 
         </div>
