--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <br>
     <section>
         <div class="flexcard">
-            <div id="brewery"></div>
-
+            <div class=card-content id="brewery"></div>
         </div>
     </section>
     
