--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <section>
+    <section >
         <h2>Breweries near you</h2>
         <div class="flex">
             <img src="./assets/Images/BeerMe.png" />
@@ -43,12 +43,23 @@
             <div id="brewery"></div>
 
         </div>
+        <div>
+            <div id="modal" class="modal is-small">
+            <div class="modal-background"></div>
+            <div class="modal-content has-background-white">
+                <h1> This zipcode has no breweries!</h1>
+                </div>
+            <button class="modal-close is-large" aria-label="close"></button>
+
+            </div>
+        </div>
         
     </section>
     <br>
     <section>
         <div class="flexcard">
             <div class=card-content id="brewery"></div>
+
         </div>
     </section>
     
