--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
             <form id="zipcode-form" class="card-body">
                 <!--<p class="card-header">Search by Zipcode:</p>-->   
-                <div class="search">  
+                <div>  
+                <button type="submit" id="fetch-button"> <i class="material-icons">search</i> </button>          
                 <input id="zipcode" type = "text" autofocus = "true" class = "form-input" placeholder="Search by zipcode"/>
-                    <button type="submit" id="fetch-button"> <i class="material-icons">search</i> </button>
                 </div>
             </form>
         </div>
@@ -39,7 +39,7 @@
                 </span>
                 
         </div>
-        <div class="flex card" id="brewery-main">
+        <div class="flex card">
             <div id="brewery"></div>
 
         </div>
