--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="hero-body is-justify-content-center">
             <h2 class="title is-justify-content-center">Find A Brewery Near You</h2>
 
-            <form id="zipcode-form" class="card-body">
+            <form id="zipcode-form" class="search">
                 <!--<p class="card-header">Search by Zipcode:</p>-->   
                 <div>  
                 <button type="submit" id="fetch-button"> <i class="material-icons">search</i> </button>          
