--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
         </div>
         <div>
-            <div id="modal" class="modal is-small">
+            <div id="modal" class="modal">
             <div class="modal-background"></div>
-            <div class="modal-content has-background-white">
-                <h1> This zipcode has no breweries!</h1>
+            <div id="model-content" class="modal-content">
+                
                 </div>
             <button class="modal-close is-large" aria-label="close"></button>
 
