--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             <div id="brewery"></div>
 
         </div>
+
+        <div id="map">
+
+        </div>
         <div>
             <div id="modal" class="modal">
             <div class="modal-background"></div>
