--- a/index.html
+++ b/index.html
@@ -46,16 +46,25 @@
             <div id="brewery"></div>
 
         </div>
-        <div>
-            <div id="modal" class="modal is-small">
-            <div class="modal-background"></div>
-            <div class="modal-content has-background-white">
-                <h1> This zipcode has no breweries!</h1>
-                </div>
-            <button class="modal-close is-large" aria-label="close"></button>
 
-            </div>
+        <div id="map">
+
         </div>
+        <div id="modal" class="modal">
+            <div class="modal-background"></div>
+            <div class="modal-content">
+                <div class="box">
+                <article class="media">
+                    <div class="media-content">
+                    <div class="content">
+                        <p id="text-modal">Please enter a City!</p>
+                    </div>
+                    </div>
+                </article>
+                </div>
+            </div>
+            <button class="modal-close is-large" aria-label="close"></button>
+            </div>
         
     </section>
     <br>
