--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!--<p class="card-header">Search by Zipcode:</p>-->   
                 <div>  
                 <button type="submit" id="fetch-button"> <i class="material-icons">search</i> </button>          
-                <input id="zipcode" type = "text" autofocus = "true" class = "form-input" placeholder="Search by zipcode"/>
+                <input id="zipcode" type = "text" autofocus = "true" class = "form-input" placeholder="Search by city"/>
                 </div>
             </form>
         </div>
@@ -70,7 +70,7 @@
     <br>
     <section>
         <div class="flexcard">
-            <div class=card-content id="brewery"></div>
+            <div class="is-flex-wrap-wrap is-justify-content-space-around" id="brewery"></div>
 
         </div>
     </section>
